RASS-806-small update for tagged bail in check answers page

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -71,7 +71,7 @@
                 text: "Tagged bail"
             },
             value: {
-                text: courtAppearance.taggedBail + " days"
+                text: courtAppearance.taggedBail + " days" if courtAppearance.taggedBail else "None"
             },
             actions: {
                 items: [
