RASS-911 change hint text for next hearing time

--- a/server/views/pages/courtAppearance/next-hearing-date.njk
+++ b/server/views/pages/courtAppearance/next-hearing-date.njk
@@ -61,7 +61,7 @@
                             classes: "govuk-label--s"
                         },
                         hint: {
-                            text: "For example, 1:00 or 13:00"
+                            text: "For example, 13:00"
                         },
                         classes: "govuk-input--width-4",
                         id: "nextHearingTime",
