--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -59,12 +59,8 @@
                         classes: "govuk-summary-list--no-border offences-summary-card-content",
                         rows: [
                             {
-                                key: {
-                                text: "Offences added"
-                            },
-                                value: {
-                                text: offences | length
-                            },
+                                key: { text: "Offences added" },
+                                value: { text: offences | length },
                                 classes: "offences-summary-card-offence-details-row"
                             }
                         ],
