RASS-903 content change - keep references to 'Court reference' consistent

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -13,7 +13,7 @@
     },
     {
         key: {
-            text: "Court case reference"
+            text: "Case reference"
         },
         value: {
             text: courtAppearance.caseReferenceNumber if courtAppearance.caseReferenceNumber else 'Not entered'
@@ -23,7 +23,7 @@
                 {
                     href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/reference?submitToCheckAnswers=true",
                     text: "Edit",
-                    visuallyHiddenText: "court case reference"
+                    visuallyHiddenText: "case reference"
                 }
             ]
         }
