--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -19,7 +19,7 @@
                                 {
                                     href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/reference",
                                     text: "Edit",
-                                    visuallyHiddenText: "case reference number"
+                                    visuallyHiddenText: "case reference"
                                 }
                             ]
                         }
