--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -27,7 +27,7 @@
                     classes: "govuk-summary-list--no-border offences-summary-card-content",
                     rows: [
                         {
-                            key: { text: "Case reference number" },
+                            key: { text: "Case reference" },
                             value: { text: courtAppearance.caseReferenceNumber if courtAppearance.caseReferenceNumber else 'Not entered' },
                             classes: "offences-summary-card-court-details-row"
                         },
