--- a/server/views/pages/courtAppearance/select-reference.njk
+++ b/server/views/pages/courtAppearance/select-reference.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
-{% set pageTitle = applicationName + " - Same case reference number page" %}
+{% set pageTitle = applicationName + " - Same case reference page" %}
 {% block content %}
     {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
