--- a/server/views/pages/courtAppearance/warrant-upload.njk
+++ b/server/views/pages/courtAppearance/warrant-upload.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/file-upload/macro.njk" import govukFileUpload %}
 
-{% set pageTitle = applicationName + " - Same case reference number page" %}
+{% set pageTitle = applicationName + " - Upload a warrant page" %}
 {% block content %}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
