Fixed a couple of small issues raised by Scott

--- a/server/views/pages/sentenceTypes/index.njk
+++ b/server/views/pages/sentenceTypes/index.njk
@@ -32,7 +32,7 @@
                 label: {
                     text: "Legacy sentence type"
                 },
-                classes: "autocomplete-select",
+                classes: "autocomplete-select govuk-select",
                 items: legacySentenceTypeItems
             }) }}
         </div>
