Changes to the sentence detail to match a couple of Cherky's suggestions More to follow

--- a/assets/scss/local.scss
+++ b/assets/scss/local.scss
@@ -30,3 +30,11 @@
 .govuk-border--1px {
   border:1px solid #b1b4b6
 }
+
+.sentence-type-detail-panel {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding: 1.5rem;
+  background-color: #f3f2f1;
+  border-radius: 4px;
+}
