--- a/server/views/pages/courtAppearance/overall-conviction-date.njk
+++ b/server/views/pages/courtAppearance/overall-conviction-date.njk
@@ -79,7 +79,7 @@
 
 
                 {{ govukButton({
-                    text: "Save and continue",
+                    text: "Continue",
                     attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
